# heimdall

./: .gitignore  Makefile  README.md  core.py  credentials.py  crypto.py  exposed.py  heimdall.py  logs.py  main.py  pyproject.toml  spinner.py  texts.py
locale/pt_BR/LC_MESSAGES/: texts_i18n.mo
